--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "node_modules/.bin/rpcfw run Service.yml"
+    "start": "node_modules/.bin/rpcfw run Service.yml",
+    "test": "node_modules/.bin/mocha"
   },
   "dependencies": {
     "aws-sdk": "^2.6.4",
@@ -12,6 +13,7 @@
     "rpcfw": "git://github.com/nsnsolutions/rpcfw.git#v1.2"
   },
   "devDependencies": {
+    "mocha": "^3.2.0",
     "nunjucks": "^2.5.2",
     "prompt": "^1.0.0"
   }
