--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "test": "node_modules/.bin/mocha"
   },
   "dependencies": {
+    "amqpuri": "1.0.3",
     "aws-sdk": "^2.6.4",
     "async": "^2.1.2",
     "lodash": "^4.17.4",
